syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


// InternalService is the service providing API endpoints for internal usage.
service InternalService {
	// Log in a user
	rpc Login(LoginRequest) returns (LoginResponse) {
		option(google.api.http) = {
			post: "/api/internal/login"
			body: "*"
		};
	}
}

message ProfileSettings {
	// Existing users in the system can not be assigned to organizations and
	// application and can not be listed by non global admin users.
	bool disable_assign_existing_users = 1;
}

// Defines an organization to which an user is associated.
message OrganizationLink {
    // Organization ID.
    int64 organization_id = 1 [json_name = "organizationID"];
    
    // Organization name.
    string organization_name = 2;
    
    // User is admin within the context of this organization.
    bool is_admin = 3;
    
    // Created at timestamp.
    google.protobuf.Timestamp created_at = 4;
    
    // Last update timestamp.
	google.protobuf.Timestamp updated_at = 5;
}

message LoginRequest {
	// Username of the user.
	string username = 1;

	// Password of the user.
	string password = 2;
}

message LoginResponse {
	// The JWT tag to be used to access lora-app-server interfaces.
	string jwt = 1;
}
