syntax = "proto3";

package api;
//import "device.proto";
import "profile.proto";

service M2MDeviceService {
    rpc AddDeviceInM2MServer (AddDeviceInM2MServerRequest) returns (AddDeviceInM2MServerResponse);
    rpc DeleteDeviceInM2MServer (DeleteDeviceInM2MServerRequest) returns (DeleteDeviceInM2MServerResponse);
}

message AppServerDeviceProfile {
    string dev_eui = 1;
    string created_at = 2;
    string last_seen_at = 3;
    int64 application_id = 4;
    string name = 5;
}

message AddDeviceInM2MServerRequest {
    int64 org_id = 1;
    repeated AppServerDeviceProfile dev_profile = 2;
}

message AddDeviceInM2MServerResponse {
    int64 dev_id = 1;
    ProfileResponse user_profile = 2;
}

message DeleteDeviceInM2MServerRequest {
    int64 org_id = 1;
    string dev_eui = 2;
}

message DeleteDeviceInM2MServerResponse {
    bool status = 1;
    ProfileResponse user_profile = 2;
}